--- a/.gitignore
+++ b/.gitignore
@@ -175,7 +175,7 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 
-## moji
+## moji radni folderi koje s ene sinhronizuju
 work
 old
 
